objects/AW_FNA__c.object
<CustomObject>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The account related to FNA</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>AW_PersonAccount,AW_Business</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FNA</relationshipLabel>
        <relationshipName>FNA</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_FNADate__c</fullName>
        <description>The date in which FNA was performed</description>
        <label>FNA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_FNADescription__c</fullName>
        <description>Description of Analysis</description>
        <label>FNA Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FNAID__c</fullName>
        <description>The Unique ID of FNA</description>
        <externalId>true</externalId>
        <label>FNA ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(AW_Account__r.FinServ__Status__c,&apos;Active&apos;), NOT(ISNULL(AW_Account__r.AW_ParentAccount__r.Id))),AW_Account__r.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FNA (MasterAccount)</relationshipLabel>
        <relationshipName>FNA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FNA</relationshipLabel>
        <relationshipName>FNA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent  Account Owner Id</description>
        <formula>IF(NOT(ISNULL(AW_Account__r.Id)),AW_Account__r.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source_Last_Modified_Date__c</fullName>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <label>FNA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AW_FNAID__c</columns>
        <columns>AW_FNADescription__c</columns>
        <columns>AW_FNADate__c</columns>
        <columns>AW_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FNA-{0000}</displayFormat>
        <label>FNA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FNA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>